@@ -38,8 +38,11 @@ extern "C" const char *Version_string;
 
 static void usage(FILE *stream)
 {
-  fprintf(stream, "usage: %s [-v] [-i XYZ] [-t N] database ...\n",
-	  program_name);
+  fprintf(stream,
+	  "usage: %s [-i XYZ] [-t N] database ...\n"
+	  "usage: %s {-v | --version}\n"
+	  "usage: %s --help\n",
+	  program_name, program_name, program_name);
 }
 
 int main(int argc, char **argv)
